deploy/base/pvc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: property-rag
